# hse-aia-hack

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/models/: llama3.py
app/utils/: data.py  prompts.py  submit.py
